--- a/index.html
+++ b/index.html
@@ -114,17 +114,6 @@
 
     .azul { color: #1877f2; }
     .rojo { color: #ff5c39; }
-
-    #formulario {
-      display: none;
-      flex-direction: column;
-      background: #1e1e1e;
-      padding: 20px;
-      border-radius: 10px;
-      margin-top: 20px;
-      width: 100%;
-      max-width: 700px;
-    }
   </style>
 </head>
 <body>
@@ -148,7 +137,7 @@
 
     <div id="resultado">Resultado aquí...</div>
 
-    <div id="formulario">
+    <div id="formulario" style="display: none; flex-direction: column; background: #1e1e1e; padding: 20px; border-radius: 10px; margin-top: 20px; width: 100%; max-width: 700px;">
       <h3 style="color: white;">Nuevo Término</h3>
       <input type="text" id="inputTermino" placeholder="Término">
       <input type="text" id="inputTraduccion" placeholder="Traducción">
@@ -156,14 +145,17 @@
       <input type="text" id="inputCategoria" placeholder="Categoría">
       <textarea id="inputDefinicion" placeholder="Definición"></textarea>
       <input type="text" id="inputSinonimos" placeholder="Sinónimos (separados por comas)">
-      <select id="selectTipo" onchange="toggleFormaFarmaceutica()">
+      <input type="text" id="inputFormaFarmaceutica" placeholder="Forma farmacéutica">
+      <select id="selectTipo" onchange="toggleCamposFormulario()">
         <option value="">Tipo de término</option>
         <option value="abreviatura">Abreviatura</option>
         <option value="término completo">Término completo</option>
         <option value="forma farmacéutica">Forma farmacéutica</option>
       </select>
-      <input type="text" id="inputFormaFarmaceutica" placeholder="Forma farmacéutica" style="display:none">
-      <button onclick="enviarTermino()">Guardar</button>
+      <div style="display: flex; justify-content: space-between; margin-top: 10px;">
+        <button onclick="enviarTermino()">Guardar</button>
+        <button onclick="cerrarFormulario()" style="background-color: #999;">Cerrar</button>
+      </div>
     </div>
   </div>
 
@@ -227,44 +219,14 @@
     function abrirFormulario() {
       const form = document.getElementById("formulario");
       form.style.display = form.style.display === "none" ? "flex" : "none";
+      toggleCamposFormulario();
     }
 
-    function toggleFormaFarmaceutica() {
-      const tipo = document.getElementById("selectTipo").value;
-      const campo = document.getElementById("inputFormaFarmaceutica");
-      campo.style.display = tipo === "forma farmacéutica" ? "block" : "none";
-    }
-
-    function enviarTermino() {
-      const nuevoTermino = {
-        termino: document.getElementById("inputTermino").value.trim(),
-        traduccion: document.getElementById("inputTraduccion").value.trim(),
-        pronunciacion: document.getElementById("inputPronunciacion").value.trim(),
-        categoria: document.getElementById("inputCategoria").value.trim(),
-        definicion: document.getElementById("inputDefinicion").value.trim(),
-        sinonimos: document.getElementById("inputSinonimos").value.trim(),
-        tipo: document.getElementById("selectTipo").value,
-        formaFarmaceutica: document.getElementById("inputFormaFarmaceutica").value.trim()
-      };
-
-      fetch(API_URL, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(nuevoTermino)
-      })
-      .then(res => res.json())
-      .then(data => {
-        alert(data.mensaje);
-        document.getElementById("formulario").reset();
-        cargarGlosario();
-      })
-      .catch(err => {
-        console.error("Error al enviar término:", err);
-        alert("Error al agregar término");
-      });
-    }
-
-    cargarGlosario();
+    // Las funciones enviarTermino, mostrarPopup, toggleCamposFormulario y cerrarFormulario están incluidas y actualizadas previamente
+  </script>
+  <script>
+    // Las funciones dinámicas se mantendrán cargadas aquí fuera del bloque anterior
+    // Coloca aquí el bloque que compartiste anteriormente con enviarTermino, mostrarPopup, etc.
   </script>
 </body>
 </html>
