--- a/index.html
+++ b/index.html
@@ -173,7 +173,6 @@
         .then(res => res.json())
         .then(data => {
           glosario = data;
-          console.log("Términos cargados:", glosario);
         })
         .catch(err => {
           console.error("Error al cargar glosario:", err);
@@ -196,12 +195,9 @@
       }
 
       if ((entrada["Tipo de término"] || '').toLowerCase() === "abreviatura") {
-        resultado.innerHTML = `
-          <div class="titulo-resultado">${termino}</div>
-          <strong>Definición:</strong><br>${entrada["Definición"] || "-"}`;
+        resultado.innerHTML = `<div class="titulo-resultado">${termino}</div><strong>Definición:</strong><br>${entrada["Definición"] || "-"}`;
       } else {
-        resultado.innerHTML = `
-          <div class="titulo-resultado">${termino}</div>
+        resultado.innerHTML = `<div class="titulo-resultado">${termino}</div>
           <strong>Traducción:</strong> ${entrada["Traducción"] || "-"}<br>
           <strong>Pronunciación:</strong> ${entrada["Pronunciación"] || "-"}<br>
           <strong>Categoría:</strong> ${entrada["Categoría"] || "-"}<br>
@@ -217,16 +213,93 @@
     }
 
     function abrirFormulario() {
-      const form = document.getElementById("formulario");
-      form.style.display = form.style.display === "none" ? "flex" : "none";
+      document.getElementById("formulario").style.display = "flex";
       toggleCamposFormulario();
     }
 
-    // Las funciones enviarTermino, mostrarPopup, toggleCamposFormulario y cerrarFormulario están incluidas y actualizadas previamente
-  </script>
-  <script>
-    // Las funciones dinámicas se mantendrán cargadas aquí fuera del bloque anterior
-    // Coloca aquí el bloque que compartiste anteriormente con enviarTermino, mostrarPopup, etc.
+    function cerrarFormulario() {
+      document.getElementById("formulario").style.display = "none";
+    }
+
+    function toggleCamposFormulario() {
+      const tipo = document.getElementById("selectTipo").value;
+      document.getElementById("inputTermino").style.display = (tipo === "abreviatura" || tipo === "término completo") ? "block" : "none";
+      document.getElementById("inputTraduccion").style.display = (tipo === "término completo" || tipo === "forma farmacéutica") ? "block" : "none";
+      document.getElementById("inputPronunciacion").style.display = (tipo === "término completo") ? "block" : "none";
+      document.getElementById("inputCategoria").style.display = (tipo === "término completo" || tipo === "forma farmacéutica") ? "block" : "none";
+      document.getElementById("inputDefinicion").style.display = (tipo === "abreviatura" || tipo === "término completo") ? "block" : "none";
+      document.getElementById("inputSinonimos").style.display = (tipo === "término completo") ? "block" : "none";
+      document.getElementById("inputFormaFarmaceutica").style.display = (tipo === "forma farmacéutica") ? "block" : "none";
+    }
+
+    function mostrarPopup(mensaje) {
+      const popup = document.createElement("div");
+      popup.textContent = mensaje;
+      popup.style.position = "fixed";
+      popup.style.top = "20px";
+      popup.style.left = "50%";
+      popup.style.transform = "translateX(-50%)";
+      popup.style.background = "#3ae374";
+      popup.style.color = "black";
+      popup.style.padding = "15px 25px";
+      popup.style.borderRadius = "10px";
+      popup.style.zIndex = "9999";
+      popup.style.boxShadow = "0 2px 10px rgba(0,0,0,0.5)";
+      document.body.appendChild(popup);
+      setTimeout(() => popup.remove(), 3000);
+    }
+
+    function enviarTermino() {
+      const tipo = document.getElementById("selectTipo").value;
+      let nuevoTermino = {
+        termino: '',
+        traduccion: '',
+        pronunciacion: '',
+        categoria: '',
+        definicion: '',
+        sinonimos: '',
+        tipo: tipo,
+        formaFarmaceutica: ''
+      };
+
+      if (tipo === "abreviatura") {
+        nuevoTermino.termino = document.getElementById("inputTermino").value.trim();
+        nuevoTermino.definicion = document.getElementById("inputDefinicion").value.trim();
+      } else if (tipo === "término completo") {
+        nuevoTermino.termino = document.getElementById("inputTermino").value.trim();
+        nuevoTermino.traduccion = document.getElementById("inputTraduccion").value.trim();
+        nuevoTermino.pronunciacion = document.getElementById("inputPronunciacion").value.trim();
+        nuevoTermino.categoria = document.getElementById("inputCategoria").value.trim();
+        nuevoTermino.definicion = document.getElementById("inputDefinicion").value.trim();
+        nuevoTermino.sinonimos = document.getElementById("inputSinonimos").value.trim();
+      } else if (tipo === "forma farmacéutica") {
+        nuevoTermino.termino = document.getElementById("inputFormaFarmaceutica").value.trim();
+        nuevoTermino.traduccion = document.getElementById("inputTraduccion").value.trim();
+        nuevoTermino.categoria = document.getElementById("inputCategoria").value.trim();
+      } else {
+        alert("Por favor selecciona un tipo de término válido.");
+        return;
+      }
+
+      fetch(API_URL, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(nuevoTermino)
+      })
+      .then(res => res.json())
+      .then(data => {
+        mostrarPopup("✅ Término enviado exitosamente");
+        document.getElementById("formulario").reset();
+        cerrarFormulario();
+        cargarGlosario();
+      })
+      .catch(err => {
+        console.error("Error al enviar término:", err);
+        alert("Error al agregar término");
+      });
+    }
+
+    cargarGlosario();
   </script>
 </body>
 </html>
