--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <div id="resultado">Resultado aquí...</div>
 
-    <div id="formulario" style="display: none; flex-direction: column; background: #1e1e1e; padding: 20px; border-radius: 10px; margin-top: 20px; width: 100%; max-width: 700px;">
+    <div id="formulario" style="display: none; flex-direction: column; background: #1e1e1e; padding: 20px; border-radius: 10px; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100%; max-width: 700px; z-index: 2000;">
       <h3 style="font-family: 'MiddleOfApril', cursive; color: #3ae374; font-weight: bold; font-size: 2rem; text-transform: uppercase; text-align: center; margin-top: 0;">Nuevo Término</h3>
       <input type="text" id="inputTermino" placeholder="Término">
       <input type="text" id="inputTraduccion" placeholder="Traducción">
