--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
       font-size: 3.5rem;
       margin: 0 0 40px 0;
       line-height: 1.2;
+      color: #fff;
     }
 
-    input, button, select, textarea {
+    input, button {
       width: 100%;
       padding: 12px;
       margin-top: 10px;
@@ -60,7 +61,7 @@
       box-sizing: border-box;
     }
 
-    input, select, textarea {
+    input {
       background: #2a2a2a;
       color: white;
     }
@@ -128,7 +129,7 @@
     </div>
 
     <div style="position: fixed; top: 10px; left: 20px; z-index: 1001;">
-      <button onclick="abrirFormulario()">Agregar Término</button>
+      <button onclick="window.location.href='agregar.html'">Agregar Término</button>
     </div>
 
     <div style="position: fixed; top: 10px; right: 20px; z-index: 1001;">
@@ -136,27 +137,6 @@
     </div>
 
     <div id="resultado">Resultado aquí...</div>
-
-    <div id="formulario" style="display: none; flex-direction: column; background: #1e1e1e; padding: 20px; border-radius: 10px; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100%; max-width: 700px; z-index: 2000;">
-      <h3 style="font-family: 'MiddleOfApril', cursive; color: #3ae374; font-weight: bold; font-size: 2rem; text-transform: uppercase; text-align: center; margin-top: 0;">Nuevo Término</h3>
-      <input type="text" id="inputTermino" placeholder="Término">
-      <input type="text" id="inputTraduccion" placeholder="Traducción">
-      <input type="text" id="inputPronunciacion" placeholder="Pronunciación">
-      <input type="text" id="inputCategoria" placeholder="Categoría">
-      <textarea id="inputDefinicion" placeholder="Definición"></textarea>
-      <input type="text" id="inputSinonimos" placeholder="Sinónimos (separados por comas)">
-      <input type="text" id="inputFormaFarmaceutica" placeholder="Forma farmacéutica">
-      <select id="selectTipo" onchange="toggleCamposFormulario()">
-        <option value="">Tipo de término</option>
-        <option value="abreviatura">Abreviatura</option>
-        <option value="término completo">Término completo</option>
-        <option value="forma farmacéutica">Forma farmacéutica</option>
-      </select>
-      <div style="display: flex; justify-content: center; gap: 10px; margin-top: 10px;">
-        <button onclick="enviarTermino()" style="width: 120px;">Guardar</button>
-        <button onclick="cerrarFormulario()" style="background-color: #999; width: 120px;">Cerrar</button>
-      </div>
-    </div>
   </div>
 
   <script>
@@ -208,105 +188,7 @@
       document.getElementById("resultado").innerText = "Resultado aquí...";
     }
 
-    function abrirFormulario() {
-      document.getElementById("formulario").style.display = "flex";
-      toggleCamposFormulario();
-    }
-
-    function cerrarFormulario() {
-      document.getElementById("formulario").style.display = "none";
-    }
-
-    function toggleCamposFormulario() {
-      const tipo = document.getElementById("selectTipo").value;
-      document.getElementById("inputTermino").style.display = (tipo === "abreviatura" || tipo === "término completo") ? "block" : "none";
-      document.getElementById("inputTraduccion").style.display = (tipo === "término completo" || tipo === "forma farmacéutica") ? "block" : "none";
-      document.getElementById("inputPronunciacion").style.display = (tipo === "término completo") ? "block" : "none";
-      document.getElementById("inputCategoria").style.display = (tipo === "término completo" || tipo === "forma farmacéutica") ? "block" : "none";
-      document.getElementById("inputDefinicion").style.display = (tipo === "abreviatura" || tipo === "término completo") ? "block" : "none";
-      document.getElementById("inputSinonimos").style.display = (tipo === "término completo") ? "block" : "none";
-      document.getElementById("inputFormaFarmaceutica").style.display = (tipo === "forma farmacéutica") ? "block" : "none";
-    }
-
-    function mostrarPopup(mensaje) {
-      const popup = document.createElement("div");
-      popup.textContent = mensaje;
-      popup.style.position = "fixed";
-      popup.style.top = "20px";
-      popup.style.left = "50%";
-      popup.style.transform = "translateX(-50%)";
-      popup.style.background = "#3ae374";
-      popup.style.color = "black";
-      popup.style.padding = "15px 25px";
-      popup.style.borderRadius = "10px";
-      popup.style.zIndex = "9999";
-      popup.style.boxShadow = "0 2px 10px rgba(0,0,0,0.5)";
-      document.body.appendChild(popup);
-      setTimeout(() => popup.remove(), 3000);
-    }
-
-    function enviarTermino() {
-  const tipo = document.getElementById("selectTipo").value;
-  let nuevoTermino = {
-    termino: '',
-    traduccion: '',
-    pronunciacion: '',
-    categoria: '',
-    definicion: '',
-    sinonimos: '',
-    tipo: tipo,
-    formaFarmaceutica: ''
-  };
-
-  if (tipo === "abreviatura") {
-    nuevoTermino.termino = document.getElementById("inputTermino").value.trim();
-    nuevoTermino.definicion = document.getElementById("inputDefinicion").value.trim();
-  } else if (tipo === "término completo") {
-    nuevoTermino.termino = document.getElementById("inputTermino").value.trim();
-    nuevoTermino.traduccion = document.getElementById("inputTraduccion").value.trim();
-    nuevoTermino.pronunciacion = document.getElementById("inputPronunciacion").value.trim();
-    nuevoTermino.categoria = document.getElementById("inputCategoria").value.trim();
-    nuevoTermino.definicion = document.getElementById("inputDefinicion").value.trim();
-    nuevoTermino.sinonimos = document.getElementById("inputSinonimos").value.trim();
-  } else if (tipo === "forma farmacéutica") {
-    nuevoTermino.termino = document.getElementById("inputFormaFarmaceutica").value.trim();
-    nuevoTermino.traduccion = document.getElementById("inputTraduccion").value.trim();
-    nuevoTermino.categoria = document.getElementById("inputCategoria").value.trim();
-  } else {
-    alert("Por favor selecciona un tipo de término válido.");
-    return;
-  }
-
-  nuevoTermino = {
-    termino: nuevoTermino.termino || '',
-    traduccion: nuevoTermino.traduccion || '',
-    pronunciacion: nuevoTermino.pronunciacion || '',
-    categoria: nuevoTermino.categoria || '',
-    definicion: nuevoTermino.definicion || '',
-    sinonimos: nuevoTermino.sinonimos || '',
-    tipo: nuevoTermino.tipo || '',
-    formaFarmaceutica: nuevoTermino.formaFarmaceutica || ''
-  };
-
-  fetch(API_URL, {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify(nuevoTermino)
-  })
-  .then(res => res.json())
-  .then(data => {
-    mostrarPopup("✅ Término enviado exitosamente");
-    document.getElementById("formulario").reset();
-    cerrarFormulario();
     cargarGlosario();
-  })
-  .catch(err => {
-    console.error("Error al enviar término:", err);
-    alert("Error al agregar término");
-  });
-}
-
-cargarGlosario();
   </script>
 </body>
 </html>
