--- a/admin.html
+++ b/admin.html
@@ -4,163 +4,88 @@
   <meta charset="UTF-8">
   <title>Panel Admin - Diccionario AR</title>
   <style>
+    @font-face {
+      font-family: 'MiddleOfApril';
+      src: url('Middle-of-April.ttf') format('truetype');
+    }
+
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #111;
-      color: #f1f1f1;
       margin: 0;
       padding: 20px;
+      font-family: 'Segoe UI', sans-serif;
+      background:
+        linear-gradient(to bottom, rgba(0,0,0,0.85), rgba(0,0,0,0.95)),
+        url('FONDOOO.jpeg') no-repeat center center fixed;
+      background-size: cover;
+      background-attachment: fixed;
+      color: #f1f1f1;
     }
 
     h1 {
+      font-family: 'MiddleOfApril', cursive;
+      font-size: 3rem;
       color: #3ae374;
       text-align: center;
+      margin-bottom: 30px;
     }
 
     .login {
-      max-width: 300px;
+      max-width: 400px;
       margin: 0 auto;
+      background-color: #1e1e1e;
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
     }
 
     input, button {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin: 10px 0;
-      font-size: 1rem;
+      font-size: 16px;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
+      box-sizing: border-box;
     }
 
     input {
-      background: #222;
+      background-color: #2a2a2a;
       color: white;
     }
 
     button {
-      background-color: #3a82f7;
+      background-color: #007acc;
       color: white;
+      font-weight: bold;
       cursor: pointer;
+      transition: background 0.3s;
     }
 
-    .admin-panel {
-      display: none;
-      max-width: 1000px;
-      margin: 20px auto;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
-
-    th, td {
-      padding: 10px;
-      border: 1px solid #555;
-      text-align: left;
-    }
-
-    .volver {
-      text-align: center;
-      margin-top: 30px;
-    }
-
-    .volver button {
-      background-color: #444;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
+    button:hover {
+      background-color: #005f99;
     }
   </style>
 </head>
 <body>
   <h1>Panel de Administración</h1>
-
-  <div class="login" id="login-box">
+  <div class="login">
     <input type="text" id="usuario" placeholder="Usuario">
-    <input type="password" id="clave" placeholder="Contraseña" onkeydown="if(event.key==='Enter'){login()}" />
-    <button onclick="login()">Ingresar</button>
-    <p id="mensaje" style="color: red;"></p>
-  </div>
-
-  <div class="admin-panel" id="admin-panel">
-    <h2>Términos guardados</h2>
-    <table id="tabla">
-      <thead>
-        <tr>
-          <th>Tipo</th>
-          <th>Nombre</th>
-          <th>Traducción</th>
-          <th>Pronunciación</th>
-          <th>Categoría</th>
-          <th>Definición</th>
-          <th>Sinónimos</th>
-          <th>Forma</th>
-        </tr>
-      </thead>
-      <tbody id="cuerpo-tabla"></tbody>
-    </table>
-  </div>
-
-  <div class="volver">
-    <button onclick="window.location.href='index.html'">⬅ Volver al Diccionario</button>
+    <input type="password" id="contrasena" placeholder="Contraseña">
+    <button onclick="ingresarAdmin()">Ingresar</button>
+    <button onclick="window.location.href='index.html'" style="background-color:#444;">Volver</button>
   </div>
 
   <script>
-    const userValido = "admin";
-    const passValida = "glosario123";
-
-    function login() {
+    function ingresarAdmin() {
       const usuario = document.getElementById("usuario").value.trim();
-      const clave = document.getElementById("clave").value.trim();
-      const mensaje = document.getElementById("mensaje");
+      const contrasena = document.getElementById("contrasena").value.trim();
 
-      if (usuario === userValido && clave === passValida) {
-        document.getElementById("login-box").style.display = "none";
-        document.getElementById("admin-panel").style.display = "block";
-        cargarDatos();
+      if (usuario === "admin" && contrasena === "admin123") {
+        alert("Acceso concedido.");
+        // Redirigir a otra página de administración si la tienes
       } else {
-        mensaje.textContent = "Usuario o contraseña incorrectos.";
+        alert("Usuario o contraseña incorrectos.");
       }
-    }
-
-    function cargarDatos() {
-      const scriptURL = "https://script.google.com/macros/s/AKfycbz3liKdqW3Q1sH-ngtSZp-FIo-z3l1d6eLM_EVmyQk-Et9ScVaNDGXtT1xsbnbfRl9v/exec";
-
-      fetch(scriptURL)
-        .then(res => res.json())
-        .then(data => {
-          const cuerpo = document.getElementById("cuerpo-tabla");
-          cuerpo.innerHTML = "";
-
-          data.forEach(item => {
-            const tr = document.createElement("tr");
-
-            const columnas = [
-              item.tipo,
-              item.nombre,
-              item.ingles,
-              item.pronunciacion,
-              item.categoria,
-              item.definicion,
-              item.sinonimos,
-              item.forma
-            ];
-
-            columnas.forEach(col => {
-              const td = document.createElement("td");
-              td.textContent = col || "-";
-              tr.appendChild(td);
-            });
-
-            cuerpo.appendChild(tr);
-          });
-        })
-        .catch(error => {
-          console.error("Error al cargar datos:", error);
-        });
     }
   </script>
 </body>
