--- a/admin.html
+++ b/admin.html
@@ -238,7 +238,15 @@
       })
     })
     .then(res => res.text())
-    .then(msg => console.log('✅ Actualizado en Google Sheets:', msg))
+    .then(msg => {
+      console.log('✅ Actualizado en Google Sheets:', msg);
+      if (msg.includes('✅ Término actualizado')) {
+        const popup = document.getElementById("popupMsg");
+        popup.textContent = msg;
+        popup.style.display = "block";
+        setTimeout(() => popup.style.display = "none", 2000);
+      }
+    })
     .catch(err => console.error('❌ Error al actualizar en Sheets:', err));
   }
 
@@ -258,5 +266,6 @@
     }
   }
 </script>
+<div id="popupMsg" style="display:none; position: fixed; top: 20px; left: 50%; transform: translateX(-50%); background-color: #3ae374; color: black; padding: 12px 24px; border-radius: 10px; font-weight: bold; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.5);">✅ Término actualizado</div>
 </body>
 </html>
